// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Card Card 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 gXOmnU"
  >
    <div
      class="Box-sc-1qu1edy-0 Card-sc-1vyc3zz-0 lfpbjM"
    >
      I am a card.
    </div>
  </div>
</div>
`;

exports[`Storyshots Card Cardset 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 gXOmnU"
  >
    <div
      class="Box-sc-1qu1edy-0 jlPsmj CardSet-sc-143b99f-0 hByntb"
    >
      <div
        class="Box-sc-1qu1edy-0 Card-sc-1vyc3zz-0 lfpbjM"
      >
        I am a 1st card in a cardset.
      </div>
      <div
        class="Box-sc-1qu1edy-0 Card-sc-1vyc3zz-0 lfpbjM"
      >
        I am a 2nd card in a cardset.
      </div>
      <div
        class="Box-sc-1qu1edy-0 Card-sc-1vyc3zz-0 lfpbjM"
      >
        I am a 3rd card in a cardset.
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Card Custom card 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 gXOmnU"
  >
    <div
      class="Box-sc-1qu1edy-0 Card-sc-1vyc3zz-0 bdKSSm"
      color="white"
    >
      I am a custom card.
    </div>
  </div>
</div>
`;
